opam-version: "2.0"
version: "v0.1.0"
maintainer: "Shea Newton <lilac@shnewto.com>"
authors: ["Shea Newton <lilac@shnewto.dev>"]
synopsis: "Narrow scope library for juggling a particular shape of YAML"
homepage: "https://github.com/shnewto/lilac"
dev-repo: "git+https://github.com/shnewto/lilac"
bug-reports: "https://github.com/shnewto/lilac/issues"
tags: [ "library" "lib" "lilac" "yaml" ]
license: "MIT"
depends: [ "dune" "cmdliner" "stdio" "base" "ounit" "yaml" "ocaml" {>= "4.10.0"} ]
build: [
  [ "dune" "build" ]
]
install: [ "dune" "install" ]