opam-version: "2.0"
version: "v0.1.1"
maintainer: "Shea Newton <lilac@shnewto.dev>"
authors: ["Shea Newton <lilac@shnewto.dev>"]
synopsis: "Get the value of any field in a YAML file as a string"
homepage: "https://github.com/shnewto/lilac"
dev-repo: "git+https://github.com/shnewto/lilac"
bug-reports: "https://github.com/shnewto/lilac/issues"
tags: [ "library" "lib" "lilac" "yaml" ]
license: "MIT"
depends: [ 
  "cmdliner" 
  "stdio" 
  "base" 
  "ounit" 
  "yaml" 
  "dune" {>= "2.7.0"}
  "ocaml" {>= "4.10.0"}
  "bisect_ppx" {dev & >= "2.5.0"} 
]
build: [
  [ "dune" "build" ]
]
install: [ "dune" "install" ]